--- a/index.html
+++ b/index.html
@@ -31,11 +31,26 @@
                     <div class="notification"></div>
                     <div class="search-container">
                         <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="text" />
+                        <input type="text" v-model="inputFromUser" @input="selectContactsToShow" />
                     </div>
 
                     <div class="conversations-container">
-                        <div v-for="(contact,index) in contacts" class="conversation" :class="{ active : activeChatIndex === index }" @click="selectActiveChat(index)">
+                        <!-- tutti i contatti -->
+                        <div v-if="inputFromUser.length === 0" v-for="(contact,index) in contacts" class="conversation" :class="{ active : activeChatIndex === index }" @click="selectActiveChat(index)">
+                            <div class="info-container">
+                                <img :src="contact.avatar" alt="" />
+                                <div class="description">
+                                    <h1>{{contact.name}}</h1>
+                                    <p>Ultimo accesso oggi alle ore 12</p>
+                                </div>
+                            </div>
+                            <div class="time-container">
+                                <h6>12:00</h6>
+                            </div>
+                        </div>
+
+                        <!-- solo i contatti selezionati (filtered)-->
+                        <div v-if="inputFromUser.length != 0" v-for="(contact,index) in filteredContacts" class="conversation" :class="{ active : activeChatIndex === index }" @click="selectActiveChat(index)">
                             <div class="info-container">
                                 <img :src="contact.avatar" alt="" />
                                 <div class="description">
