--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="chat-block">
                     <!--  //////////////////////////////////////////////////////////////// CHAT-BLOCK-START -->
                     <div class="header">
-                        <div class="info-container">
+                        <div v-for="!isFiltered" class="info-container">
                             <img :src="contacts[activeChatIndex].avatar" alt="" />
                             <div class="description">
                                 <h1>{{contacts[activeChatIndex].name}}</h1>
@@ -106,7 +106,7 @@
 
                     <div class="input-container">
                         <i class="fa-regular fa-face-smile"></i>
-                        <input type="text" />
+                        <input type="text" v-model="chatInput" @keyup.enter="addMessage" />
 
                         <i class="fa-solid fa-microphone"></i>
                     </div>
