--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <div class="info-container">
                             <img src="img/avatar_1.jpg" alt="" />
                             <div class="description">
-                                <h1>Michele</h1>
+                                <h1>Hugo</h1>
                             </div>
                         </div>
                         <div class="icon-container">
